--- a/MarvelDatabase/Base.lproj/Main.storyboard
+++ b/MarvelDatabase/Base.lproj/Main.storyboard
@@ -390,6 +390,7 @@
                         <outlet property="comixDescription" destination="08f-Pa-PaB" id="GGn-vR-1yt"/>
                         <outlet property="comixThumb" destination="S8K-eN-Yq9" id="TJ7-ht-6wa"/>
                         <outlet property="comixTitle" destination="cLf-Ne-cSb" id="KaB-5H-qTF"/>
+                        <segue destination="0Q3-EB-6qr" kind="show" identifier="bigScreenShot" id="pz8-qO-gFg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xva-dp-VlX" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -399,6 +400,38 @@
                 </imageView>
             </objects>
             <point key="canvasLocation" x="2535" y="345"/>
+        </scene>
+        <!--Big Screen ShotVC-->
+        <scene sceneID="IEp-43-ojj">
+            <objects>
+                <viewController id="0Q3-EB-6qr" customClass="BigScreenShotVC" customModule="MarvelDatabase" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="kt7-gs-BO2"/>
+                        <viewControllerLayoutGuide type="bottom" id="Qwj-rg-inx"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="LnH-B1-l4X">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NvO-Ma-rcb">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="NvO-Ma-rcb" firstAttribute="leading" secondItem="LnH-B1-l4X" secondAttribute="leading" id="7EG-LJ-C13"/>
+                            <constraint firstItem="Qwj-rg-inx" firstAttribute="top" secondItem="NvO-Ma-rcb" secondAttribute="bottom" id="9QY-fJ-WPN"/>
+                            <constraint firstAttribute="trailing" secondItem="NvO-Ma-rcb" secondAttribute="trailing" id="IfJ-bS-QXc"/>
+                            <constraint firstItem="NvO-Ma-rcb" firstAttribute="top" secondItem="kt7-gs-BO2" secondAttribute="bottom" id="hFh-Cd-Sbl"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="image" destination="NvO-Ma-rcb" id="T1a-uu-OM1"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2hC-Ie-asY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3189" y="345"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="g5Y-6T-VI2">
