--- a/MarvelDatabase/Base.lproj/Main.storyboard
+++ b/MarvelDatabase/Base.lproj/Main.storyboard
@@ -241,11 +241,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RE2-zq-KdT">
-                                <rect key="frame" x="0.0" y="545" width="600" height="55"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RE2-zq-KdT">
+                                <rect key="frame" x="0.0" y="554" width="600" height="46"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Data provided by Marvel. © 2014 Marvel" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="1FK-U3-WW0">
-                                        <rect key="frame" x="20" y="17" width="560" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Data provided by Marvel. © 2014 Marvel" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="1FK-U3-WW0">
+                                        <rect key="frame" x="20" y="8" width="560" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="0.8445851293103448" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -253,12 +253,7 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.95686274510000002" green="0.26274509800000001" blue="0.21176470589999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottomMargin" secondItem="1FK-U3-WW0" secondAttribute="bottom" constant="9" id="6bX-Da-MHz"/>
-                                    <constraint firstAttribute="height" constant="55" id="7MX-uc-1xa"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="55" id="a0I-Ri-AmN"/>
-                                    <constraint firstAttribute="trailingMargin" secondItem="1FK-U3-WW0" secondAttribute="trailing" constant="12" id="iSJ-18-hFd"/>
-                                    <constraint firstItem="1FK-U3-WW0" firstAttribute="top" secondItem="RE2-zq-KdT" secondAttribute="topMargin" constant="9" id="pOw-qw-ZQg"/>
-                                    <constraint firstItem="1FK-U3-WW0" firstAttribute="leading" secondItem="RE2-zq-KdT" secondAttribute="leadingMargin" constant="12" id="pkO-3z-KDB"/>
+                                    <constraint firstAttribute="height" constant="46" id="IJ4-qq-aTF"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u6i-8x-AkA">
@@ -379,8 +374,11 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="RE2-zq-KdT" secondAttribute="trailing" id="FUJ-CI-Oy0"/>
                             <constraint firstItem="u6i-8x-AkA" firstAttribute="leading" secondItem="mzB-Jl-ZLO" secondAttribute="leading" id="Fff-I7-Mbh"/>
+                            <constraint firstItem="RE2-zq-KdT" firstAttribute="leading" secondItem="mzB-Jl-ZLO" secondAttribute="leading" id="Nd0-mj-RlF"/>
                             <constraint firstItem="Pif-j4-MYJ" firstAttribute="top" secondItem="u6i-8x-AkA" secondAttribute="bottom" constant="45" id="ceU-d6-3PS"/>
+                            <constraint firstItem="Pif-j4-MYJ" firstAttribute="top" secondItem="RE2-zq-KdT" secondAttribute="bottom" id="inF-Pv-bdk"/>
                             <constraint firstAttribute="trailing" secondItem="u6i-8x-AkA" secondAttribute="trailing" id="qhZ-mR-mcE"/>
                             <constraint firstItem="u6i-8x-AkA" firstAttribute="top" secondItem="AV0-gA-ihc" secondAttribute="bottom" id="uBg-2e-OBk"/>
                         </constraints>
@@ -393,6 +391,21 @@
                         <segue destination="0Q3-EB-6qr" kind="show" identifier="bigScreenShot" id="pz8-qO-gFg"/>
                     </connections>
                 </viewController>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4sD-FB-Chy">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="55"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Data provided by Marvel. © 2014 Marvel" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="8cc-QL-IDY">
+                            <rect key="frame" x="20" y="17" width="560" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" red="1" green="1" blue="1" alpha="0.84458512929999996" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" red="0.95686274510000002" green="0.26274509800000001" blue="0.21176470589999999" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="55" id="qGB-6C-pnw"/>
+                    </constraints>
+                </view>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xva-dp-VlX" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <imageView userInteractionEnabled="NO" alpha="0.5" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Marvel_character_group-crop" id="XAN-5L-AZB">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="543"/>
@@ -414,15 +427,34 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NvO-Ma-rcb">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="493"/>
                             </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="byN-9b-FIh">
+                                <rect key="frame" x="0.0" y="554" width="600" height="46"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Data provided by Marvel. © 2014 Marvel" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="No1-q3-PC2">
+                                        <rect key="frame" x="20" y="8" width="560" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="0.84458512929999996" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.95686274510000002" green="0.26274509800000001" blue="0.21176470589999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="46" id="1bZ-oD-4g4"/>
+                                    <constraint firstAttribute="height" constant="46" id="Jjg-6j-yWw"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="NvO-Ma-rcb" firstAttribute="leading" secondItem="LnH-B1-l4X" secondAttribute="leading" id="7EG-LJ-C13"/>
-                            <constraint firstItem="Qwj-rg-inx" firstAttribute="top" secondItem="NvO-Ma-rcb" secondAttribute="bottom" id="9QY-fJ-WPN"/>
-                            <constraint firstAttribute="trailing" secondItem="NvO-Ma-rcb" secondAttribute="trailing" id="IfJ-bS-QXc"/>
-                            <constraint firstItem="NvO-Ma-rcb" firstAttribute="top" secondItem="kt7-gs-BO2" secondAttribute="bottom" id="hFh-Cd-Sbl"/>
+                            <constraint firstItem="NvO-Ma-rcb" firstAttribute="leading" secondItem="LnH-B1-l4X" secondAttribute="leading" id="2rt-3A-dcC"/>
+                            <constraint firstItem="Qwj-rg-inx" firstAttribute="top" secondItem="byN-9b-FIh" secondAttribute="bottom" id="F7h-FD-mLL"/>
+                            <constraint firstItem="byN-9b-FIh" firstAttribute="leading" secondItem="LnH-B1-l4X" secondAttribute="leading" id="UU1-Oa-hC6"/>
+                            <constraint firstItem="NvO-Ma-rcb" firstAttribute="top" secondItem="kt7-gs-BO2" secondAttribute="bottom" id="V9x-sF-lyY"/>
+                            <constraint firstItem="Qwj-rg-inx" firstAttribute="top" secondItem="NvO-Ma-rcb" secondAttribute="bottom" constant="43" id="WGX-Zn-Lst"/>
+                            <constraint firstAttribute="trailing" secondItem="NvO-Ma-rcb" secondAttribute="trailing" id="b3w-8j-cgy"/>
+                            <constraint firstAttribute="trailing" secondItem="byN-9b-FIh" secondAttribute="trailing" id="vah-I9-vmF"/>
                         </constraints>
                     </view>
                     <connections>
